--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       width:1440px;
      }
      .logo{
-      background-image: url("C:/xampp/htdocs/internship/images/bg-header-desktop.png");
+      background-image: url("bg-header-desktop.png");
       height:300px;
      }
      img{
