--- a/index.html
+++ b/index.html
@@ -235,19 +235,19 @@ font-size: 18px;
   .heading3{
     text-align: center;
    color: hsl(210, 10%, 33%);
-     margin-top:25px;
+   margin:25px 0px 0px 15px;
    
 }
  .heading4{
   text-align: center;
   color: hsl(210, 10%, 33%);
-     margin-top:25px;
+     margin:25px 0px 0px 15px;
   
 }
  .heading5{
   text-align: center;
  color: hsl(210, 10%, 33%);
-     margin-top:25px;
+    margin:25px 0px 0px 15px;
 }
 .headings{
   display:flex;
@@ -422,7 +422,7 @@ Quick preview of all snippets on your Clipboard<br> for easy access.
         </div>
       </div>
         <div class = "icon">
-        <img src="file:logo-google.png">
+        <img src="logo-google.png">
         <img src="logo-ibm.png">
         <img src="logo-microsoft.png">
         <img src="logo-hp.png">
