--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ ul li{
   </div>
   Remove unwanted formatting from copied text<br>for a consistent look</div>
         <div class = "logo3">
-          <img src="file:///C:/xampp/htdocs/internship/images/icon-preview.svg">
+          <img src="icon-preview.svg">
             <div class = "heading10">
   <b><h1>Sneak preview</h1></b>
   </div>
