--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     font-family: 'Bai Jamjuree';
     font-weight: 400px, 600px;
     color:hsl(201, 11%, 66%);
+   margin:0px;
+   padding:0px;
   }
   
 .container{
