--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 .buttons{
   display: flex;
   justify-content:center;
-
+  cursor:pointer;
 }
 button{
   width:200px;
@@ -51,9 +51,11 @@ border-radius: 80px;
 font-size: 18px; 
   color:white;
   margin-top: 40px;
+  cursor:pointer;
 }
 .button2{
   margin-left:10px;
+  cursor:pointer;
 }
 .content{
   display: flex;
@@ -216,6 +218,7 @@ ul li{
   display: flex;
   justify-content:center;
   flex-direction: column;
+  cursor:pointer;
 }
 button{
   width:350px;
@@ -226,9 +229,11 @@ font-size: 18px;
   color:white;
   margin-top: 40px;
   margin-left: 10px;
+  cursor:pointer;
 }
 .button2{
   margin-left:0px;
+  cursor:pointer;
 }
 .content{
   display: flex;
